--- a/requisicao_dados.ipynb
+++ b/requisicao_dados.ipynb
@@ -1,21 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "999276ae",
-   "metadata": {},
-   "source": [
-    "ID das ligas que serao usadas:\n",
-    "- Bundesliga (Alemanha): 78\n",
-    "- LALIGA (Espanha): 140\n",
-    "- Campeonato Brasileiro (Brasil): 71\n",
-    "- Ligue 1 (Franca): 61\n",
-    "- Premier League (Inglaterra): 39"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "358c8acc",
    "metadata": {},
    "outputs": [],
@@ -29,14 +16,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "60c9fd0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leona\\AppData\\Local\\Temp\\ipykernel_20832\\1366082022.py:34: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pd.concat([df, df_liga])\n"
+     ]
+    }
+   ],
    "source": [
-    "import requests\n",
+    "import http.client\n",
+    "import pandas as pd\n",
+    "import json\n",
     "\n",
-    "url = \"v3.football.api-sports.io\""
+    "conn = http.client.HTTPSConnection(\"v3.football.api-sports.io\")\n",
+    "\n",
+    "headers = {\n",
+    "    'x-rapidapi-host': \"v3.football.api-sports.io\",\n",
+    "    'x-rapidapi-key': API_KEY\n",
+    "}\n",
+    "\n",
+    "'''\n",
+    "ID das ligas que serao usadas:\n",
+    "- Bundesliga (Alemanha): 78\n",
+    "- LALIGA (Espanha): 140\n",
+    "- Campeonato Brasileiro (Brasil): 71\n",
+    "- Ligue 1 (Franca): 61\n",
+    "- Premier League (Inglaterra): 39\n",
+    "'''\n",
+    "\n",
+    "ligas = [\"78\", \"140\", \"71\", \"61\", \"39\"]\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "for liga in ligas:\n",
+    "    conn.request(\"GET\", f\"/fixtures?season=2023&league={liga}\", headers=headers)\n",
+    "\n",
+    "    res = conn.getresponse()\n",
+    "    data = res.read()\n",
+    "\n",
+    "    data_transformed = json.loads(data)\n",
+    "    df_liga = pd.json_normalize(data_transformed[\"response\"])\n",
+    "\n",
+    "    df = pd.concat([df, df_liga])\n",
+    "\n",
+    "df.to_csv(\"df_ligas_completo.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5d875573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixture.id</th>\n",
+       "      <th>fixture.referee</th>\n",
+       "      <th>fixture.timezone</th>\n",
+       "      <th>fixture.date</th>\n",
+       "      <th>fixture.timestamp</th>\n",
+       "      <th>fixture.periods.first</th>\n",
+       "      <th>fixture.periods.second</th>\n",
+       "      <th>fixture.venue.id</th>\n",
+       "      <th>fixture.venue.name</th>\n",
+       "      <th>fixture.venue.city</th>\n",
+       "      <th>...</th>\n",
+       "      <th>goals.away</th>\n",
+       "      <th>score.halftime.home</th>\n",
+       "      <th>score.halftime.away</th>\n",
+       "      <th>score.fulltime.home</th>\n",
+       "      <th>score.fulltime.away</th>\n",
+       "      <th>score.extratime.home</th>\n",
+       "      <th>score.extratime.away</th>\n",
+       "      <th>score.penalty.home</th>\n",
+       "      <th>score.penalty.away</th>\n",
+       "      <th>ID Liga</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1048881</td>\n",
+       "      <td>F. Zwayer</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>2023-08-18T18:30:00+00:00</td>\n",
+       "      <td>1692383400</td>\n",
+       "      <td>1692383400</td>\n",
+       "      <td>1692387000</td>\n",
+       "      <td>755.0</td>\n",
+       "      <td>wohninvest WESERSTADION</td>\n",
+       "      <td>Bremen</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1048886</td>\n",
+       "      <td>F. Badstübner</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>2023-08-19T13:30:00+00:00</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692455400</td>\n",
+       "      <td>752.0</td>\n",
+       "      <td>Volkswagen Arena</td>\n",
+       "      <td>Wolfsburg</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1048887</td>\n",
+       "      <td>S. Jablonski</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>2023-08-19T13:30:00+00:00</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692455400</td>\n",
+       "      <td>724.0</td>\n",
+       "      <td>PreZero Arena</td>\n",
+       "      <td>Sinsheim</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1048884</td>\n",
+       "      <td>F. Brych</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>2023-08-19T13:30:00+00:00</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692455400</td>\n",
+       "      <td>699.0</td>\n",
+       "      <td>BayArena</td>\n",
+       "      <td>Leverkusen</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1048888</td>\n",
+       "      <td>D. Schlager</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>2023-08-19T13:30:00+00:00</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692451800</td>\n",
+       "      <td>1692455400</td>\n",
+       "      <td>698.0</td>\n",
+       "      <td>WWK Arena</td>\n",
+       "      <td>Augsburg</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixture.id fixture.referee fixture.timezone               fixture.date  \\\n",
+       "0     1048881       F. Zwayer              UTC  2023-08-18T18:30:00+00:00   \n",
+       "1     1048886   F. Badstübner              UTC  2023-08-19T13:30:00+00:00   \n",
+       "2     1048887    S. Jablonski              UTC  2023-08-19T13:30:00+00:00   \n",
+       "3     1048884        F. Brych              UTC  2023-08-19T13:30:00+00:00   \n",
+       "4     1048888     D. Schlager              UTC  2023-08-19T13:30:00+00:00   \n",
+       "\n",
+       "   fixture.timestamp  fixture.periods.first  fixture.periods.second  \\\n",
+       "0         1692383400             1692383400              1692387000   \n",
+       "1         1692451800             1692451800              1692455400   \n",
+       "2         1692451800             1692451800              1692455400   \n",
+       "3         1692451800             1692451800              1692455400   \n",
+       "4         1692451800             1692451800              1692455400   \n",
+       "\n",
+       "   fixture.venue.id       fixture.venue.name fixture.venue.city  ...  \\\n",
+       "0             755.0  wohninvest WESERSTADION             Bremen  ...   \n",
+       "1             752.0         Volkswagen Arena          Wolfsburg  ...   \n",
+       "2             724.0            PreZero Arena           Sinsheim  ...   \n",
+       "3             699.0                 BayArena         Leverkusen  ...   \n",
+       "4             698.0                WWK Arena           Augsburg  ...   \n",
+       "\n",
+       "  goals.away score.halftime.home  score.halftime.away score.fulltime.home  \\\n",
+       "0          4                   0                    1                   0   \n",
+       "1          0                   2                    0                   2   \n",
+       "2          2                   0                    2                   1   \n",
+       "3          2                   2                    1                   3   \n",
+       "4          4                   3                    3                   4   \n",
+       "\n",
+       "   score.fulltime.away score.extratime.home score.extratime.away  \\\n",
+       "0                    4                  NaN                  NaN   \n",
+       "1                    0                  NaN                  NaN   \n",
+       "2                    2                  NaN                  NaN   \n",
+       "3                    2                  NaN                  NaN   \n",
+       "4                    4                  NaN                  NaN   \n",
+       "\n",
+       "  score.penalty.home score.penalty.away  ID Liga  \n",
+       "0                NaN                NaN       78  \n",
+       "1                NaN                NaN       78  \n",
+       "2                NaN                NaN       78  \n",
+       "3                NaN                NaN       78  \n",
+       "4                NaN                NaN       78  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
