--- a/tratamento_dados.ipynb
+++ b/tratamento_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "dfc9d497",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bb5ffb86",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f9534f98",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,54 +283,296 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove = [\"fixture.referee\", # Nome do árbitro da partida\n",
-    "          \"fixture.timezone\", # Fuso horário do jogo\n",
-    "          \"fixture.timestamp\", # Data/hora em formato numérico (Unix)\n",
-    "          \"fixture.periods.first\", # Timestamp de início do 1º tempo\n",
-    "          \"fixture.periods.second\", # Timestamp de início do 2º tempo\n",
-    "          \"fixture.status.long\", # Descrição longa do status do jogo\n",
-    "          \"fixture.status.elapsed\", # Minutos jogados na partida\n",
-    "          \"fixture.status.extra\", # Detalhe extra do status (ex: prorrogação)\n",
-    "          \"league.logo\", # URL do logo da liga\n",
-    "          \"league.flag\", # URL da bandeira do país da liga\n",
-    "          \"league.standings\", # Tabela de classificação da liga\n",
-    "          \"teams.home.logo\", # URL do logo do time da cas\n",
-    "          \"teams.home.winner\", # Indicador de vitória (true/false) do time da casa\n",
-    "          \"teams.away.logo\", # URL do logo do time visitante\n",
-    "          \"teams.away.winner\", # Indicador de vitória (true/false) do time visitante\n",
-    "          \"score.fulltime.home\", # Placar do time da casa no tempo regulamentar\n",
-    "          \"score.fulltime.away\" # Placar do time visitante no tempo regulamentar\n",
-    "          ]\n",
+    "remove = [\n",
+    "    \"fixture.id\",              # ID da partida\n",
+    "    \"fixture.referee\",         # Nome do árbitro da partida\n",
+    "    \"fixture.timezone\",        # Fuso horário em que o jogo foi realizado (ex: UTC)\n",
+    "    \"fixture.timestamp\",       # Data/hora do jogo em formato numérico (Unix Timestamp)\n",
+    "    \"fixture.periods.first\",   # Timestamp exato do início do primeiro tempo\n",
+    "    \"fixture.periods.second\",  # Timestamp exato do início do segundo tempo\n",
+    "    \"fixture.status.long\",     # Descrição textual longa do status (ex: \"Match Finished\")\n",
+    "    \"fixture.status.elapsed\",  # Minutos de jogo decorridos (útil para jogos ao vivo)\n",
+    "    \"fixture.status.extra\",    # Informação extra do status (ex: tempo de prorrogação)\n",
+    "    \"league.logo\",             # URL para a imagem do logo da liga\n",
+    "    \"league.flag\",             # URL para a imagem da bandeira do país da liga\n",
+    "    \"league.season\",           # Ano da temporada da competição (ex: 2023)\n",
+    "    \"league.round\",            # Rodada ou fase da competição (ex: \"Regular Season - 15\")\n",
+    "    \"league.standings\",        # Dados aninhados da tabela de classificação da liga\n",
+    "    \"teams.home.logo\",         # URL para a imagem do logo do time da casa\n",
+    "    \"teams.home.winner\",       # Indicador de vitória (true/false) do time da casa, redundante com o placar\n",
+    "    \"teams.away.logo\",         # URL para a imagem do logo do time visitante\n",
+    "    \"teams.away.winner\",       # Indicador de vitória (true/false) do time visitante, redundante com o placar\n",
+    "    \"score.fulltime.home\",     # Gols do time da casa ao final do tempo regulamentar (90 min)\n",
+    "    \"score.fulltime.away\",     # Gols do time visitante ao final do tempo regulamentar (90 min)\n",
+    "    \"score.halftime.home\",     # Gols do time da casa no intervalo (1º tempo)\n",
+    "    \"score.halftime.away\",     # Gols do time visitante no intervalo (1º tempo)\n",
+    "    \"score.extratime.home\",    # Gols do time da casa na prorrogação\n",
+    "    \"score.extratime.away\",    # Gols do time visitante na prorrogação\n",
+    "    \"score.penalty.home\",      # Gols do time da casa na disputa de pênaltis\n",
+    "    \"score.penalty.away\",      # Gols do time visitante na disputa de pênaltis\n",
+    "]\n",
     "\n",
     "df.drop(columns=remove, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "236cb32c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1756 entries, 0 to 1755\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   fixture.date          1756 non-null   object \n",
+      " 1   fixture.venue.id      1663 non-null   float64\n",
+      " 2   fixture.venue.name    1756 non-null   object \n",
+      " 3   fixture.venue.city    1756 non-null   object \n",
+      " 4   fixture.status.short  1756 non-null   object \n",
+      " 5   league.id             1756 non-null   int64  \n",
+      " 6   league.name           1756 non-null   object \n",
+      " 7   league.country        1756 non-null   object \n",
+      " 8   teams.home.id         1756 non-null   int64  \n",
+      " 9   teams.home.name       1756 non-null   object \n",
+      " 10  teams.away.id         1756 non-null   int64  \n",
+      " 11  teams.away.name       1756 non-null   object \n",
+      " 12  goals.home            1756 non-null   int64  \n",
+      " 13  goals.away            1756 non-null   int64  \n",
+      "dtypes: float64(1), int64(5), object(8)\n",
+      "memory usage: 192.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d5cbe51e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"fixture.date\"] = pd.to_datetime(df[\"fixture.date\"]).dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "64131d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "condicoes = [\n",
+    "    df[\"goals.home\"] > df[\"goals.away\"],\n",
+    "    df[\"goals.home\"] < df[\"goals.away\"],\n",
+    "    df[\"goals.home\"] == df[\"goals.away\"]\n",
+    "]\n",
+    "\n",
+    "resultados = [\n",
+    "    \"Vitória_Casa\",\n",
+    "    \"Vitória_Visitante\",\n",
+    "    \"Empate\"\n",
+    "]\n",
+    "\n",
+    "df[\"winner\"] = np.select(condicoes, resultados, default=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0fcc7b2b",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixture.date</th>\n",
+       "      <th>fixture.venue.id</th>\n",
+       "      <th>fixture.venue.name</th>\n",
+       "      <th>fixture.venue.city</th>\n",
+       "      <th>fixture.status.short</th>\n",
+       "      <th>league.id</th>\n",
+       "      <th>league.name</th>\n",
+       "      <th>league.country</th>\n",
+       "      <th>teams.home.id</th>\n",
+       "      <th>teams.home.name</th>\n",
+       "      <th>teams.away.id</th>\n",
+       "      <th>teams.away.name</th>\n",
+       "      <th>goals.home</th>\n",
+       "      <th>goals.away</th>\n",
+       "      <th>winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-08-18</td>\n",
+       "      <td>755.0</td>\n",
+       "      <td>wohninvest WESERSTADION</td>\n",
+       "      <td>Bremen</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Bundesliga</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Werder Bremen</td>\n",
+       "      <td>157</td>\n",
+       "      <td>Bayern Munich</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Vitória_Visitante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-08-19</td>\n",
+       "      <td>752.0</td>\n",
+       "      <td>Volkswagen Arena</td>\n",
+       "      <td>Wolfsburg</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Bundesliga</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>161</td>\n",
+       "      <td>VfL Wolfsburg</td>\n",
+       "      <td>180</td>\n",
+       "      <td>FC Heidenheim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Vitória_Casa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-08-19</td>\n",
+       "      <td>724.0</td>\n",
+       "      <td>PreZero Arena</td>\n",
+       "      <td>Sinsheim</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Bundesliga</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>167</td>\n",
+       "      <td>1899 Hoffenheim</td>\n",
+       "      <td>160</td>\n",
+       "      <td>SC Freiburg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Vitória_Visitante</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-08-19</td>\n",
+       "      <td>699.0</td>\n",
+       "      <td>BayArena</td>\n",
+       "      <td>Leverkusen</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Bundesliga</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>168</td>\n",
+       "      <td>Bayer Leverkusen</td>\n",
+       "      <td>173</td>\n",
+       "      <td>RB Leipzig</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Vitória_Casa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-08-19</td>\n",
+       "      <td>698.0</td>\n",
+       "      <td>WWK Arena</td>\n",
+       "      <td>Augsburg</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Bundesliga</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>170</td>\n",
+       "      <td>FC Augsburg</td>\n",
+       "      <td>163</td>\n",
+       "      <td>Borussia Monchengladbach</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Empate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['fixture.id', 'fixture.date', 'fixture.venue.id', 'fixture.venue.name',\n",
-       "       'fixture.venue.city', 'fixture.status.short', 'league.id',\n",
-       "       'league.name', 'league.country', 'league.season', 'league.round',\n",
-       "       'teams.home.id', 'teams.home.name', 'teams.away.id', 'teams.away.name',\n",
-       "       'goals.home', 'goals.away', 'score.halftime.home',\n",
-       "       'score.halftime.away', 'score.extratime.home', 'score.extratime.away',\n",
-       "       'score.penalty.home', 'score.penalty.away'],\n",
-       "      dtype='object')"
+       "  fixture.date  fixture.venue.id       fixture.venue.name fixture.venue.city  \\\n",
+       "0   2023-08-18             755.0  wohninvest WESERSTADION             Bremen   \n",
+       "1   2023-08-19             752.0         Volkswagen Arena          Wolfsburg   \n",
+       "2   2023-08-19             724.0            PreZero Arena           Sinsheim   \n",
+       "3   2023-08-19             699.0                 BayArena         Leverkusen   \n",
+       "4   2023-08-19             698.0                WWK Arena           Augsburg   \n",
+       "\n",
+       "  fixture.status.short  league.id league.name league.country  teams.home.id  \\\n",
+       "0                   FT         78  Bundesliga        Germany            162   \n",
+       "1                   FT         78  Bundesliga        Germany            161   \n",
+       "2                   FT         78  Bundesliga        Germany            167   \n",
+       "3                   FT         78  Bundesliga        Germany            168   \n",
+       "4                   FT         78  Bundesliga        Germany            170   \n",
+       "\n",
+       "    teams.home.name  teams.away.id           teams.away.name  goals.home  \\\n",
+       "0     Werder Bremen            157             Bayern Munich           0   \n",
+       "1     VfL Wolfsburg            180             FC Heidenheim           2   \n",
+       "2   1899 Hoffenheim            160               SC Freiburg           1   \n",
+       "3  Bayer Leverkusen            173                RB Leipzig           3   \n",
+       "4       FC Augsburg            163  Borussia Monchengladbach           4   \n",
+       "\n",
+       "   goals.away             winner  \n",
+       "0           4  Vitória_Visitante  \n",
+       "1           0       Vitória_Casa  \n",
+       "2           2  Vitória_Visitante  \n",
+       "3           2       Vitória_Casa  \n",
+       "4           4             Empate  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4aa9ca41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"df_ligas_tratado.csv\", index=False)"
    ]
   }
  ],
