Tratamento finalizado | Análises iniciadas

--- a/tratamento_dados.ipynb
+++ b/tratamento_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dfc9d497",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bb5ffb86",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f9534f98",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f408bf51",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "236cb32c",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d5cbe51e",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "64131d1a",
    "metadata": {},
    "outputs": [],
@@ -385,6 +385,17 @@
     "]\n",
     "\n",
     "df[\"winner\"] = np.select(condicoes, resultados, default=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "efbd8d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"winner.team\"] = np.where(df[\"winner\"] == \"Vitória_Casa\", df[\"teams.home.name\"],\n",
+    "                             np.where(df[\"winner\"] == \"Vitória_Visitante\", df[\"teams.away.name\"], \"-\"))"
    ]
   },
   {
@@ -429,6 +440,7 @@
        "      <th>goals.home</th>\n",
        "      <th>goals.away</th>\n",
        "      <th>winner</th>\n",
+       "      <th>winner.team</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -449,6 +461,7 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>Vitória_Visitante</td>\n",
+       "      <td>Bayern Munich</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -467,6 +480,7 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>Vitória_Casa</td>\n",
+       "      <td>VfL Wolfsburg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -485,6 +499,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>Vitória_Visitante</td>\n",
+       "      <td>SC Freiburg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -503,6 +518,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>Vitória_Casa</td>\n",
+       "      <td>Bayer Leverkusen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -521,6 +537,7 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>Empate</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -548,12 +565,12 @@
        "3  Bayer Leverkusen            173                RB Leipzig           3   \n",
        "4       FC Augsburg            163  Borussia Monchengladbach           4   \n",
        "\n",
-       "   goals.away             winner  \n",
-       "0           4  Vitória_Visitante  \n",
-       "1           0       Vitória_Casa  \n",
-       "2           2  Vitória_Visitante  \n",
-       "3           2       Vitória_Casa  \n",
-       "4           4             Empate  "
+       "   goals.away             winner       winner.team  \n",
+       "0           4  Vitória_Visitante     Bayern Munich  \n",
+       "1           0       Vitória_Casa     VfL Wolfsburg  \n",
+       "2           2  Vitória_Visitante       SC Freiburg  \n",
+       "3           2       Vitória_Casa  Bayer Leverkusen  \n",
+       "4           4             Empate                 -  "
       ]
      },
      "execution_count": 9,
